--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
     <script src="/toJadenCase.js"></script>
     <script src="/divisors.js"></script>
     <script src="/maskify.js"></script>
+    <script src="/tower.js"></script>
+    <script src="/toCamelCase.js"></script>
 </body>
 </html>
