--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
     <script src="/maskify.js"></script>
     <script src="/tower.js"></script>
     <script src="/toCamelCase.js"></script>
+    <script src="/calculatingWithFunctions.js"></script>
 </body>
 </html>
