--- a/index.html
+++ b/index.html
@@ -10,5 +10,9 @@
     <script src="/tower.js"></script>
     <script src="/toCamelCase.js"></script>
     <script src="/calculatingWithFunctions.js"></script>
+    <script src="/consecutiveStrings.js"></script>
+    <script src="/romanNumeralsDecoder.js"></script>
+    <script src="/movingZeroToEnd.js"></script>
+    <script src="stringIncrementer.js"></script>
 </body>
 </html>
